compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__custom_type_module_constants.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1149
expression: "type X { X }\nconst x = unknown.X"

---
error: Unknown module
  ┌─ /src/one/two.gleam:2:11
  │
2 │ const x = unknown.X
  │           ^^^^^^^^^

No module has been found with the name `unknown`.

